@@ -27,11 +27,11 @@ as it has much fewer dependencies and is more reliable.
 
 ## github\_user
 
-The GitHub user or org that owns the repository.
+The GitHub user or org that owns the repository.  This property is required.
 
 ## github\_repo
 
-The GitHub repository name.
+The GitHub repository name.  This property is required.
 
 ## version
 
@@ -50,11 +50,11 @@ How to sort candidates for selection.  This should be one of three types of valu
 
     Use [Alien::Build::Plugin::Prefer::SortVersions](https://metacpan.org/pod/Alien::Build::Plugin::Prefer::SortVersions).
 
-    (This is the default, and reasonable for many GitHub repositories).
-
 - false value
 
-    Don't set any preference at all.  A hook must be installed, or another prefer plugin specified.
+    Don't set any preference at all.  The order returned from GitHub will be used if
+    no other prefer plugins are specified.  This may be reasonable for at least some
+    GitHub repositories.  This is the default.
 
 # AUTHOR
 
